[package]
name = "dav-busylog"
version = "0.1.0"
authors = ["Daniel Danner <daniel@danner.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.12.0"
rusqlite = { version = "0.25.0", features = ["chrono"] }
chrono = "0.4.19"
